# archivd

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  clipboard.rs  filesystem.rs  lib.rs  main.rs  metadata.rs  settings.rs  source.rs
src/components/: Popup.tsx  Settings.tsx
src/components/dashboard/: ClipCard.tsx  ClipDetail.tsx  Dashboard.tsx  SettingsPanel.tsx  Sidebar.tsx
src/lib/: api.ts  clipUtils.ts  types.ts
