[package]
name = "archivd"
version = "0.1.0"
description = "Local-first markdown capture for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "archivd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
enigo = "0.3"
chrono = "0.4"
dirs = "6"
